Debut des fonctionnnalités de connectivités

--- a/public/css/bg.css
+++ b/public/css/bg.css
@@ -125,3 +125,34 @@ button.bg-linear-official-50:hover{
 .w-80{
     width: 80% !important;
 }
+
+
+
+
+.cursor{
+    cursor: pointer;
+}
+.cursor:hover{
+    transform: scale(1.1);
+}
+
+.pricing-table h2{
+    font-size: 1.2rem;
+}
+.profils p{
+    padding: 0;
+    margin: 0;
+    font-size: 0.8rem;     
+}
+
+div.pricing-table-sign-up a{
+    font-size: 0.7rem;
+}
+
+.pricing-table-sign-up a{
+    border-top: thin solid white !important;
+}
+
+.administration .fa.cursor{
+    color: white !important;
+}    
